--- a/backend/composer.json
+++ b/backend/composer.json
@@ -11,7 +11,9 @@
     },
     "require": {
         "php": "^8.1",
-        "codeigniter4/framework": "^4.0"
+        "codeigniter4/framework": "^4.0",
+        "firebase/php-jwt": "^6.11",
+        "ramsey/uuid": "^4.9"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9",
